Gestion du caractère dynamique de l'adresseIP et du port