@@ -1,18 +1,10 @@
-## Getting Started
+## Execution
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+* `java --enable-preview -cp bin ServerRMI [Port]`
 
-## Folder Structure
+  or
+* `java --enable-preview -jar remoteCalcServer.jar [Port]`
 
-The workspace contains two folders by default, where:
+## Requirements
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
-
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
-
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
-
-## Dependency Management
-
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+* java 21.0.2
